[gd_scene load_steps=16 format=2]

[ext_resource path="res://textures/splash.png" type="Texture" id=1]
[ext_resource path="res://textures/boat.png" type="Texture" id=2]
[ext_resource path="res://scripts/boat.gd" type="Script" id=4]
[ext_resource path="res://scripts/fish_spawn.gd" type="Script" id=5]
[ext_resource path="res://scripts/casting_scene.gd" type="Script" id=6]
[ext_resource path="res://scripts/reel_scene.gd" type="Script" id=7]
[ext_resource path="res://scripts/overworld_camera.gd" type="Script" id=8]
[ext_resource path="res://textures/water/Water Texture - Layer 3.png" type="Texture" id=9]
[ext_resource path="res://textures/spotlight.png" type="Texture" id=11]
[ext_resource path="res://materials/water_distortion.tres" type="Material" id=12]
[ext_resource path="res://textures/water/Water Texture - Base.png" type="Texture" id=14]
[ext_resource path="res://textures/water/Water Texture - Layer 1.png" type="Texture" id=15]
[ext_resource path="res://textures/water/Water Texture - Layer 2.png" type="Texture" id=16]
[ext_resource path="res://textures/backgrounds/TestBG1.png" type="Texture" id=17]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 70.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 250.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -5.0
radial_accel = -5.0
scale = 1.2
scale_random = 1.0
color = Color( 0.807843, 0.894118, 0.913725, 1 )
hue_variation = -0.02
hue_variation_random = 0.57

[node name="Node2D" type="Node2D"]

[node name="boat" type="KinematicBody2D" parent="."]
position = Vector2( 1285.79, 617.499 )
z_index = 1
script = ExtResource( 4 )

[node name="splash_particles" type="Particles2D" parent="boat"]
position = Vector2( 30, 0 )
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="boat_sprite" type="Sprite" parent="boat"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="boat_collision_body" type="CollisionPolygon2D" parent="boat"]
rotation = 1.57079
polygon = PoolVector2Array( -2.49872, -48.21, -11.4988, -30.2101, -19.499, -12.2101, -23.4991, 10.7899, -21.4993, 38.7899, -11.4994, 62.7899, -5.49945, 69.7899, 1.50055, 71.79, 8.50055, 69.79, 15.5006, 61.7902, 25.5007, 37.7902, 27.5009, 11.7902, 23.501, -11.2098, 15.5012, -30.2098, 5.50128, -48.21, 1.50134, -57.21 )

[node name="boat_area2d" type="Area2D" parent="boat"]
collision_layer = 2
collision_mask = 2
input_pickable = false

[node name="boat_collision_body_copy" type="CollisionPolygon2D" parent="boat/boat_area2d"]
rotation = 1.57079
polygon = PoolVector2Array( -2.49872, -48.21, -11.4988, -30.2101, -19.499, -12.2101, -23.4991, 10.7899, -21.4993, 38.7899, -11.4994, 62.7899, -5.49945, 69.7899, 1.50055, 71.79, 8.50055, 69.79, 15.5006, 61.7902, 26.5007, 37.7902, 27.5009, 11.7902, 23.501, -11.2098, 15.5012, -30.2098, 5.50128, -48.21, 1.50134, -57.21 )

[node name="cast_scene" type="Position2D" parent="boat"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2400, 2400 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/background"]
mouse_filter = 2
texture = ExtResource( 17 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="water_parallax_base" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )
motion_mirroring = Vector2( 2400, 1200 )

[node name="water_texture_base" type="TextureRect" parent="ParallaxBackground/water_parallax_base"]
modulate = Color( 1, 1, 1, 0.541176 )
margin_right = 2400.0
margin_bottom = 1200.0
mouse_filter = 2
texture = ExtResource( 14 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="water_parallax_layer_1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 2400, 1200 )

[node name="water_texture_layer_1" type="TextureRect" parent="ParallaxBackground/water_parallax_layer_1"]
self_modulate = Color( 1, 1, 1, 0.403922 )
margin_right = 2400.0
margin_bottom = 1200.0
mouse_filter = 2
texture = ExtResource( 15 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="water_parallax_layer_2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )
motion_mirroring = Vector2( 2400, 1200 )

[node name="water_texture_layer_2" type="TextureRect" parent="ParallaxBackground/water_parallax_layer_2"]
self_modulate = Color( 1, 1, 1, 0.47451 )
margin_right = 2400.0
margin_bottom = 1200.0
mouse_filter = 2
texture = ExtResource( 16 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="water_parallax_layer_3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_offset = Vector2( 1, 1 )
motion_mirroring = Vector2( 2400, 1200 )

[node name="water_texture_layer_1" type="TextureRect" parent="ParallaxBackground/water_parallax_layer_3"]
modulate = Color( 1, 1, 1, 0.462745 )
margin_right = 2400.0
margin_bottom = 1200.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="overworld_camera" type="Camera2D" parent="."]
position = Vector2( 1285.79, 617.499 )
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 8 )

[node name="Light2D" type="Light2D" parent="overworld_camera"]
show_behind_parent = true
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 11 )
energy = 0.4
range_z_max = 0

[node name="Control" type="Control" parent="overworld_camera"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reel_scene" type="Node2D" parent="overworld_camera/Control"]
position = Vector2( -400, -200 )
z_index = 3
script = ExtResource( 7 )

[node name="water_shaders" type="Node2D" parent="."]

[node name="distorter" type="ColorRect" parent="water_shaders"]
material = ExtResource( 12 )
margin_left = -2.0
margin_top = -6.0
margin_right = 1918.0
margin_bottom = 1074.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map_node" type="Node" parent="."]
script = ExtResource( 5 )

[node name="spawn_regions" type="Node" parent="."]

[node name="Psychonitoth\'s Zone" type="Area2D" parent="spawn_regions"]
collision_layer = 16
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="spawn_regions/Psychonitoth\'s Zone"]
polygon = PoolVector2Array( 91, 193, 230, 447, 503, 447, 638, 256, 641, 63, 302, 64 )

[node name="Pneumistis\' Zone" type="Area2D" parent="spawn_regions"]
collision_layer = 16
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="spawn_regions/Pneumistis\' Zone"]
polygon = PoolVector2Array( 336, 631, 568, 508, 790, 848, 461, 1023, 306, 1025, 64, 868, 54, 634, 212, 546 )
